--- a/ansible/provision.yml
+++ b/ansible/provision.yml
@@ -9,19 +9,14 @@
         cidr: 10.0.2.0/24
       - az: us-west-2c
         cidr: 10.0.3.0/24
-    name_prefix: percy_dev
+    name_prefix: ansible
   tasks:
     - name: Create a new VPC
       amazon.aws.ec2_vpc_net:
         name: "{{ name_prefix }}_vpc"
         cidr_block: 10.0.0.0/16
-        ipv6_cidr: true
         region: "{{ aws_region }}"
       register: vpc
-
-    - name: Print vpc info
-      ansible.builtin.debug:
-        var: vpc
 
     - name: Create internet gateway
       ansible.builtin.ec2_vpc_igw:
@@ -30,10 +25,6 @@
         tags:
           Name: "{{ name_prefix }}_igw"
       register: igw
-
-    - name: Print igw info
-      ansible.builtin.debug:
-        var: igw
 
     - name: Create subnets
       ansible.builtin.ec2_vpc_subnet:
@@ -45,10 +36,6 @@
           Name: "{{ name_prefix }}_{{ item.az }}"
       register: subnet
       loop: "{{ subnets }}"
-
-    - name: Print subnet info
-      ansible.builtin.debug:
-        var: subnet
 
     - name: Create public route table
       ansible.builtin.ec2_vpc_route_table:
@@ -77,10 +64,6 @@
             cidr_ip: 0.0.0.0/0
       register: sg
 
-    - name: Print sg info
-      ansible.builtin.debug:
-        var: sg
-
     - name: Get AMI ID
       amazon.aws.ec2_ami_info:
         region: "{{ aws_region }}"
@@ -88,10 +71,6 @@
         filters:
           name: "ubuntu/images/hvm-ssd-gp3/ubuntu-noble-24.04-amd64-server-*"
       register: ami
-
-    - name: Print AMI info
-      ansible.builtin.debug:
-        var: ami
 
     - name: Create an instance
       amazon.aws.ec2_instance:
@@ -106,6 +85,6 @@
           assign_public_ip: true
       register: instance
 
-    - name: Print instance info
+    - name: Print instance public ip
       ansible.builtin.debug:
-        var: instance
+        var: instance.instances[0].public_ip_address
